Homework 2 review incremental commit.

--- a/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
+++ b/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
@@ -154,11 +154,10 @@ The reverberant field sound pressure level is approximately 98.3 dB SPL.
 
 Figure~\ref{figure:sabineRoomLevels} shows the direct, reverberant, and total sound pressure levels for a 25 mW, 125 Hz, broadband, omnidirectional source placed centrally in the room (i.e. the directivity factor is 1).
 
-\vspace{-4cm}
 \begin{figure}[htb!]
     \center
-        \includegraphics[ scale = 0.65, keepaspectratio ]{Sabine Room.pdf}
-    \vspace{-3.5cm}
+        \includegraphics[scale = 1.0, keepaspectratio]{Sabine Room.pdf}
+    \vspace{0.25cm}        
     \caption{Sound levels for the room produced by a 25 mW, 125 Hz omnidirectional, broadband source.}
     \label{figure:sabineRoomLevels}
 \end{figure}
@@ -179,7 +178,7 @@ Figure~\ref{figure:q3AverageAbsorption} shows the average absorption per octave 
 
 \begin{figure}[htb!]
     \center
-        \includegraphics[ scale = 0.6, keepaspectratio ]{Q3 Average Absorption.png}
+        \includegraphics[scale = 1.0, keepaspectratio]{Q3 Average Absorption.pdf}
     \caption{Average absorption per octave band.}
     \label{figure:q3AverageAbsorption}
 \end{figure}
@@ -191,7 +190,7 @@ Figure~\ref{figure:q3TransmissionLoss} shows the transmission loss per octave ba
 
 \begin{figure}[htb!]
     \center
-        \includegraphics[ scale = 0.6, keepaspectratio ]{Q3 Transmission Loss.png}
+        \includegraphics[scale = 1.0, keepaspectratio]{Q3 Transmission Loss.pdf}
     \caption{Transmission loss per octave band.}
     \label{figure:q3TransmissionLoss}
 \end{figure}
