--- a/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
+++ b/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
@@ -179,6 +179,7 @@ Figure~\ref{figure:q3AverageAbsorption} shows the average absorption per octave 
 \begin{figure}[htb!]
     \center
         \includegraphics[scale = 1.0, keepaspectratio]{Q3 Average Absorption.pdf}
+    \vspace{0.25cm}        
     \caption{Average absorption per octave band.}
     \label{figure:q3AverageAbsorption}
 \end{figure}
@@ -191,6 +192,7 @@ Figure~\ref{figure:q3TransmissionLoss} shows the transmission loss per octave ba
 \begin{figure}[htb!]
     \center
         \includegraphics[scale = 1.0, keepaspectratio]{Q3 Transmission Loss.pdf}
+    \vspace{0.25cm}
     \caption{Transmission loss per octave band.}
     \label{figure:q3TransmissionLoss}
 \end{figure}
